Names on poster

--- a/presentation.html
+++ b/presentation.html
@@ -44,7 +44,7 @@
             section[aria-label="Authors"] {
                 display: flex;
                 flex-direction: row;
-                width: 50%;
+                width: 75%;
                 margin-inline: auto;
                 > * {
                     flex-basis: 100%;
@@ -60,15 +60,17 @@
         <header>
             <h1>The Idea Repository</h1>
             <section aria-label="Authors">
+                <p>Angela Ackermann</p>
                 <p>Sean Lauritzen</p>
-                <p>Naedia Mccann</p>
-                <p>Austin Steen</p>
-                <p>Charlyn Woodruff</p>
+                <p>Kevin Hoge</p>
+                <p>Grant Kent</p>
+                <p>Wyatt McNeil</p>
+                <p>Josephine Poulin</p>
             </section>
             <section aria-label="Project Information">
                 <p>Department of Computer Information Technology, WVNCC</p>
-                <p>CIT 237: Advanced Database Programming</p>
-                <p>4 December, 2024</p>
+                <p>CIT 291: CIT Internship &amp; Certification</p>
+                <p>2 May, 2025</p>
             </section>
         </header>
         <main>
@@ -80,7 +82,7 @@
             <p>Lobortis mi quisque class vestibulum diam; mi ultrices dapibus. Dignissim sodales mauris scelerisque faucibus odio risus. Accumsan dis ultrices ultrices felis nec laoreet arcu. Maximus nulla ridiculus eu nam netus senectus ullamcorper. Donec ante facilisis sapien fermentum primis in per dignissim accumsan. Fames mollis elementum facilisi amet congue sit euismod convallis ac? Commodo a cras hac curae pretium.</p>
             <p>Elit etiam tortor nostra mi accumsan tortor a scelerisque. Risus donec etiam orci vivamus suscipit lobortis pellentesque ac. Auctor dis inceptos ipsum rutrum cubilia id mi libero. Id tempus interdum penatibus nisi vivamus sapien. Vulputate habitant cras metus, vulputate sociosqu magna senectus vel. Eleifend nunc class non viverra viverra tortor consequat. Habitant aptent neque arcu curae egestas. Elit hac hac rutrum rutrum venenatis. Conubia felis pretium pretium hendrerit tristique purus vivamus lacinia.</p>
             <h2>This will be Soemthing</h2>
-            <img src="http://cit.wvncc.edu/idea-repository/uploads/1.png">
+            <img src="whatever">
             <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Commodo tempor facilisis hendrerit venenatis luctus nisi! Himenaeos justo rhoncus porttitor massa volutpat non velit. Aenean fusce tellus etiam a egestas ullamcorper. Erat facilisi nisl sagittis tempus amet. Lectus sociosqu ridiculus ultrices potenti accumsan cursus. Sapien dui dapibus nec phasellus; accumsan accumsan laoreet magnis libero. Conubia mattis donec vel leo vehicula. Habitasse sed orci; ridiculus ad ullamcorper massa?</p>
             <p>Cubilia cubilia senectus curabitur class nibh lorem primis. Aptent dui vivamus consequat efficitur; ullamcorper ornare. Pellentesque aenean ultricies rhoncus potenti lobortis. Integer donec fusce urna, curae sagittis tempus sem.</p>
             <h2>This will be Soemthing</h2>
